Updates from Overleaf

--- a/appendices/d-results/results.tex
+++ b/appendices/d-results/results.tex
@@ -1,1 +1,9 @@
 \chapter{Results}
+\section{Combined passport alike }
+%\begin{table}[tbp]
+ %   \centering
+  %  \csvautobooktabular{csvtables/2Combined passport alike scores.csv}
+%\end{table}
+\includepdf[pages=-]{appendices/d-results/Combined passport alike scores}
+\includepdf[pages=-]{appendices/d-results/Capture from photo scores}
+\includepdf[pages=-]{appendices/d-results/Selfie dataset scores}
