--- a/appendices/meeting-reports/1-meetings-supervisor.tex
+++ b/appendices/meeting-reports/1-meetings-supervisor.tex
@@ -2,15 +2,17 @@
 %\tableofcontents
 \chapter{Meetings with project supervisor}
 
-We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. 
+We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. There were also some extraordinary meetings during the project.
+
+% TODO: add the latest meeting reports, after the 10th of May.
 
 \section*{Meeting with project supervisor 11.01.2021}
-\subsection*{Agenda}
+\subsection*{Planned agenda}
 \begin{itemize}
     \item Getting started.
 \end{itemize}
 
-\subsection*{Summary of other subjects}
+\subsection*{Summaries}
 \begin{itemize}
     \item Think about how we will run the user tests?
     \item Where will we get face images? From Mobai?
@@ -23,38 +25,10 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00.
     \item Should we write everything in English?
 \end{itemize}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%% MAL %%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-\section*{Meeting with project supervisor xx.xx.2021}
-\subsection*{Agenda}
-\begin{itemize}
-    \item 
-\end{itemize}
-
-\subsection*{Summary of other subjects}
-\begin{itemize}
-    \item 
-    \item 
-    \item 
-\end{itemize}
-
-\subsection*{Agenda for the next week}
-\begin{itemize}
-    \item 
-    \item 
-\end{itemize}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
 
 \section*{Meeting with project supervisor 18.01.2021}
-\subsection*{Agenda}
+\subsection*{Planned agenda}
 \begin{itemize}
     \item Explain the project further to the supervisor.
     \item Show the time plan to the supervisor.
@@ -69,12 +43,12 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00.
     \item Show and discuss the group rules.
 \end{itemize}
 
-\subsection*{Summary of other subjects}
+\subsection*{Summaries}
 \begin{itemize}
     \item How should we conduct the subjective experiment?
     \begin{itemize}
-        \item Evaluate which platform we want to use and why we decide to use it. We can use QuickEval, SurveyMonkey, LimeSurvey or some other platform.
-        \item The images should be in random order.
+        \item Evaluate which platform we want to use and why we decide to use it. We can use QuickEval, SurveyMonkey, LimeSurvey, or some other platform.
+        \item The images should be shown in a random order.
         \item What can we include in our dataset/subjective experiments that are unique?
     \end{itemize}
     \item Create a structure of the thesis, with names of the chapters and sections. Include the number of pages. 
@@ -82,7 +56,462 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00.
 
 \subsection*{Agenda for the next week}
 \begin{itemize}
-    \item Send papers and group rules to Ali.
-    \item First draft for the structure of the thesis. Write down the chapters.
+    \item Send research papers and group rules to Ali.
+    \item Write the first draft for the structure of the thesis. Write down the chapter names and number of pages.
 \end{itemize}
 
+\newpage
+
+\section*{Meeting with project supervisor 27.01.2021}
+\subsection*{Planned agenda}
+\begin{itemize}
+\item Show our project plan
+\item Show our draft of the project structure with chapter headings and number of pages.
+\item Subjective assessment: 
+    \begin{itemize}
+    \item Which score range is the best one to use? 1-5, 1-20?
+    \item How should we do the survey? Score one and one image? Put multiple images in order of quality score?
+    \end{itemize}
+\item In the report, can we use different tenses (past, present, future) in the same paragraph?
+\end{itemize}
+
+\subsection*{Summaries}
+\begin{itemize}
+    \item Draft of the project structure:
+    \begin{itemize}
+        \item Add numbers to the chapters.
+        \item Add the number of pages (and required time) to sections.
+        \item The sections we have written down look good.
+        \item Maybe move the subjective assessment to a separate chapter (if it’s long and makes sense to put it in a separate section). 
+        \item Excessive theory that is not used in the report will affect the grading of the report.
+    \end{itemize}
+    \item Creating the subjective assessment:
+    \begin{itemize}
+        \item Check a few datasets that are out there, see what they do and how they do it.
+        \item Display the images in random order.
+    \end{itemize}
+    \item About the thesis writing.
+    \begin{itemize}
+        \item Don’t jump between tenses. Use Past tense.
+        \item In the results, use past or present tense.
+        \item Do a shift to present in the end.
+        \end{itemize}
+\end{itemize}
+
+\subsection*{Agenda for the next week}
+\begin{itemize}
+    \item Send the project plan to Ali.
+    \item Look into one or two data sets.
+    \item Finalize our time plan.
+\end{itemize}
+
+\newpage
+
+\section*{Meeting with project supervisor 01.02.2021}
+\subsection*{Planned agenda}
+\begin{itemize}
+    \item Go through our project plan and the comments from Ali.
+    \item Show the supplementary agreement from Mobai. Any thoughts?
+    \item What is a data set? A collection of images?
+    \item Our goal with the application. How should it work?
+\end{itemize}
+
+\subsection*{Summaries}
+\begin{itemize}
+    \item We went through the project plan and wrote down the comments from Ali.
+    \item Speak to Tom about the supplementary agreement.
+    \item Speak with Mobai about how the application should work. 
+    \item Dataset:
+    \begin{itemize}
+        \item It’s called a dataset or datasets (one word). \item Dataset: a collection of images.
+        \item We evaluate the quality of an image.
+        \item The quality of the dataset: how we present and run the test decides the quality of the dataset. The higher the quality, the more reliability.
+    \end{itemize}
+\end{itemize}
+
+\subsection*{Agenda for the next week}
+\begin{itemize}
+    \item Create a pilot test for the subjective experiment. Be prepared for comments and changes. Have a finished test by the 15th of February.
+\end{itemize}
+
+\newpage
+
+\section*{Meeting with project supervisor 08.02.2021}
+\subsection*{Planned agenda}
+\begin{itemize}
+    \item Show our pilot of the subjective experiment.
+    \item Mobai’s and Ali’s definition of a quality image are two different things? 
+    \item We will use SurveyMonkey/QuickEval for the subjective experiment, with random image order. 
+    \item Our dataset consists of 280 images. Mobai wants all participants in the subjective experiment to rate all of the 280 images in the dataset.
+    \item How do we perform the subjective experiment?
+    \item How do we pick the best 100 images from the “Faces in the wild” dataset?
+    \item Invite Ali to join a meeting with Mobai.
+\end{itemize}
+
+\subsection*{Summaries}
+\begin{itemize}
+    \item Use the same rating system for the experiment.
+    \item Can we split the images in the subjective experiment into three sets? Ask Mobai.
+    \item How do we perform the subjective experiment?
+    \begin{itemize}
+        \item Suggestion for the subjective experiment: split the experiment into 3 sessions. One session for each image folder in the dataset. Should the sessions be split over multiple days or the same day with breaks between sessions?
+        \item Remember: if we split into multiple sessions we need to track the sessions of the participants so we can connect the different sessions to the same participant.
+        \item Have a training set first to train the participants for the experiment?
+        \item Don’t mention “quality” (or, define clearly what we mean by quality.
+        \item We want to test the face recognition quality.
+        \item Define who we want to ask to take the subjective experiment.
+    \end{itemize}
+    \item How do we pick the best 100 images from the “Faces in the wild” dataset?
+    \begin{itemize}
+        \item Variant image quality matters. I.e., pick a variety of images where the faces are covered or less visible in some way, e.g. with sunglasses, different poses, different perspectives and so on.
+        \item Also pick images where the faces are clearly visible (“passport-like”).
+    \end{itemize}
+    \item There are three kinds of metrics:
+    \begin{itemize}
+        \item Full access metrics
+        \item Reduced reference
+        \item No reference
+    \end{itemize}
+    \item Ali will join our next meeting with Mobai on Tuesday.
+\end{itemize}
+
+\subsection*{Agenda for the next week}
+\begin{itemize}
+    \item Create clear instructions for the users of the subjective experiment. What do we want the users to evaluate? 
+    \item Test the datasets with the IQMs and check out the results.
+\end{itemize}
+
+\newpage
+
+\section*{Meeting with project supervisor 11.02.2021}
+\subsection*{Planned agenda}
+\begin{itemize}
+    \item Talk about our meeting with Mobai on Tuesday.
+    \item Use face image quality score from 1-10?
+\end{itemize}
+
+\subsection*{Summaries}
+\begin{itemize}
+    \item Find the smallest of all of the images in the datasets. Downsize all the images to the same size (and keep the aspect ratio).
+    \item Use the  face image quality scores 1-5, or maybe 1-7?
+\end{itemize}
+
+\newpage
+
+\section*{Meeting with project supervisor 15.02.2021}
+\subsection*{Planned agenda}
+\begin{itemize}
+    \item Go through the comments on the survey instructions
+    \item Should all of the images be of the same size?
+    \item Dataset 3, “Faces in the wild” is not good enough.
+\end{itemize}
+
+\subsection*{Summaries}
+\begin{itemize}
+    \item We went through the survey instructions and made the necessary adjustments:
+    \begin{itemize}
+        \item We can create a control dataset. We can use images of ourselves.
+        \item We will create image lineups from the control dataset.
+        \item Have Mobai rate the images in the survey instruction.
+    \end{itemize}
+\end{itemize}
+
+\newpage
+
+\section*{Meeting with project supervisor 22.02.2021}
+\subsection*{Planned agenda}
+\begin{itemize}
+    \item Update on our current status:
+    \begin{itemize}
+        \item Currently working on the frontend and backend for the web application.
+    \end{itemize}
+\end{itemize}
+
+\subsection*{Summaries}
+\begin{itemize}
+    \item We will continue working on the web application.
+\end{itemize}
+
+\newpage
+
+\section*{Meeting with project supervisor 01.03.2021}
+\subsection*{Planned agenda}
+\begin{itemize}
+    \item Show experiment instructions:
+    \begin{itemize}
+        \item At the beginning of the instructions, include “a very brief intro about the face recognition system”?
+        \item Delete the slides at the end?
+    \end{itemize}
+\end{itemize}
+
+\subsection*{Summaries}
+\begin{itemize}
+    \item Survey instructions:
+    \begin{itemize}
+        \item Send 15 images each to Mobai and have them rate all of them. Ask Guoqiang to have them rated by Wednesday.
+        \item In the image lineups: image with the lowest score on the left.
+        \item Random is good. In a lineup, we include different pictures of each of the members. Have a 1-5 rating for each member.
+    \end{itemize}
+    \item Write about our dataset in the thesis.
+    \item Before sending out the subjective experiment:
+    \begin{itemize}
+        \item Test the experiment ourselves first.
+        \item Get approval of the experiment by sending it to Ali and Guoqiang.
+        \item Then send it out to a few people, not all of them.
+    \end{itemize}
+    \item Start writing about things in the thesis that will not change.
+\end{itemize}
+
+\subsection*{Agenda for the next week}
+\begin{itemize}
+    \item Send 15 images each to Mobai and have them rate all of them. Ask Guoqiang to have them rated by Wednesday.
+    \item Ask mobai if they want us to create our own dataset.
+\end{itemize}
+
+\newpage
+
+\section*{Meeting with project supervisor 08.03.2021}
+\subsection*{Planned agenda}
+\begin{itemize}
+    \item About the subjective experiment on QuickEval.
+\end{itemize}
+
+\subsection*{Summaries}
+\begin{itemize}
+    \item About sending out the subjective experiment to the participants:
+    \begin{itemize}
+        \item Do not ask the users for any personal information in the survey.
+        \item Add “Mobai” in the title of the email. The title of the email is important. We need to engage people.
+        \item Use Blind carbon copy (BCC) when sending the email to survey participants.
+    \end{itemize}
+\end{itemize}
+
+\subsection*{Agenda for the next week}
+\begin{itemize}
+    \item Send the mail to Ali and Guoqiang first.
+    \item Send the mail to the participants.
+\end{itemize}
+
+\newpage
+
+\section*{Meeting with project supervisor 15.03.2021}
+\subsection*{Planned agenda}
+\begin{itemize}
+    \item About the dataset we are creating. How do we create a “wow factor”?
+\end{itemize}
+
+\subsection*{Summaries}
+\begin{itemize}
+    \item Suggestions for the dataset we are creating:
+    \begin{itemize}
+        \item Make it a bit challenging. 
+        \item Have other people in the background. 
+        \item Painting of someone in the background.
+        \item Partial faces (like the selfie dataset).
+        \item Test images with the metrics.
+    \end{itemize}
+    \item We discussed different ways to display the data from the experiments:
+    \begin{itemize}
+        \item Calculate the different correlation values. Which metric is performing better?
+        \item 3D-plot, Spider chart, Rose chart.
+        \item How we present it is important. It will stick in the mind of the reviewer. 
+        \item What do we want to present to the user?
+    \end{itemize}
+\end{itemize}
+
+\newpage
+
+\section*{Meeting with project supervisor 22.03.2021}
+\subsection*{Planned agenda}
+\begin{itemize}
+    \item Is Ali gone next Monday?
+    \item Delimitation (avgrensning?)
+\end{itemize}
+
+\subsection*{Summaries}
+\begin{itemize}
+    \item There will be a meeting next Monday as usual.
+    \item We talked about the structure of the thesis:
+    \begin{itemize}
+        \item Why we made the decisions we did.
+        \item Write about why we went for a web platform. Pros and cons.
+        \item Write the skeleton for the whole thesis.
+        \item Write the sections so we easily can move them around.
+        \item Add flow between the sections.
+    \end{itemize}
+\end{itemize}
+
+\newpage
+
+\section*{Meeting with project supervisor 29.03.2021}
+\subsection*{Planned agenda}
+\begin{itemize}
+    \item Thesis structure.
+\end{itemize}
+
+\subsection*{Summaries}
+\begin{itemize}
+    \item We discussed how we should structure the thesis (details not included).
+\end{itemize}
+
+\subsection*{Agenda for the next week}
+\begin{itemize}
+    \item Send thesis chapter 1 to Ali.
+\end{itemize}
+
+\newpage
+
+\section*{Meeting with project supervisor 06.04.2021}
+\subsection*{Planned agenda}
+\begin{itemize}
+    \item Talk about the thesis.
+\end{itemize}
+
+\subsection*{Summaries}
+\begin{itemize}
+    \item Ali will look at the final draft of our chapters: 
+    \begin{itemize}
+        \item Send him the final draft of a chapter when we finish it. 
+        \item He will go through the whole report in the end.
+    \end{itemize}
+    \item Some other people will join our meeting on the 19th.
+    \item Find a name for our dataset.
+\end{itemize}
+
+\newpage
+
+\section*{Meeting with project supervisor 12.04.2021}
+\subsection*{Planned agenda}
+\begin{itemize}
+    \item Review thesis chapter 1.
+    \item Will Ali join our meeting with Mobai tomorrow?
+\end{itemize}
+
+\subsection*{Summaries}
+\begin{itemize}
+    \item We reviewed chapter 1:
+    \begin{itemize}
+        \item Be more strict about using paragraphs. The language is good, just present it in a better way.
+    \end{itemize}
+    \item Run the matrices on our own dataset. 
+\end{itemize}
+
+\newpage
+
+\section*{Meeting with project supervisor 19.04.2021}
+\subsection*{Planned agenda}
+\begin{itemize}
+    \item Discuss thesis chapter 2.
+    \item Creating our own dataset is completed.
+\end{itemize}
+
+\subsection*{Summaries}
+\begin{itemize}
+    \item We discussed thesis chapter 2 and the comments from Ali. (Comments are not added).
+    \item We will create a second subjective experiment with our own dataset:
+    \begin{itemize}
+        \item Select 250 images from the dataset.
+        \item Add effects like blurring, noise etc. to the images and test them with the metrics. Will the scores change?
+    \end{itemize}
+\end{itemize}
+
+\newpage
+
+\section*{Meeting with project supervisor 26.04.2021}
+\subsection*{Planned agenda}
+\begin{itemize}
+    \item Discuss user testing.
+    \item Split the second subjective experiment into two parts? 125 images in each part.
+    \item Can Ali edit 50 of the images? How should we edit the images? Blurring, noise, exposure.
+    \item Talk about the results from the subjective experiment.
+    \item Plotting the results from the experiments.
+\end{itemize}
+
+\subsection*{Summaries}
+\begin{itemize}
+    \item User tests should be done by people at Mobai.
+    \item We discussed the second subjective experiment. 
+    \item We will create a third subjective experiment based on the second subjective experiment:
+    \begin{itemize}
+        \item Select 50 images from the second subjective experiment. 10 images from each rating category (10 images rated 1 - poor, 10 images rated 2 - bad, and so on).
+        \item Edit the images in different ways and create the new experiment with these images.
+        \item We can add “untypical” distortions.
+    \end{itemize}
+    \item We talked about the thesis and the metrics. (Notes not included).
+    \item Plotting the results:
+    \begin{itemize}
+        \item Box plot. Shows the distribution of the scores.
+        \item Show experts, non-experts, and both of them together.
+        \item Subjective and objective scores should be separate.
+    \end{itemize}
+    \item Our dataset:
+    \begin{itemize}
+        \item All images in the dataset should be portrait. Fix landscape images to portrait images. 
+    \end{itemize}
+\end{itemize}
+
+\newpage
+
+\section*{Meeting with project supervisor 03.05.2021}
+\subsection*{Planned agenda}
+\begin{itemize}
+    \item All invited participants have completed the second subjective experiment.
+    \item How should we distort the images for the final experiment?
+    \item Discuss thesis chapter 3.
+\end{itemize}
+
+\subsection*{Summaries}
+\begin{itemize}
+    \item We discussed thesis chapter 3. (Notes not included).
+    \item Create the third and final subjective experiment:
+    \begin{itemize}
+        \item Select 50 images, 10 images from each rating category.
+        \item The image should be as diverse as possible.
+        \item Add four distortions to each image:
+        \begin{itemize}
+            \item Two types of compression, e.g., Facebook Messenger.
+            \item Two types of image edits, e.g., noise, blur or exposure.
+            \item The distortions should be reproducible, i.e., something that other people can do. Use e.g., Photoshop or IrfanView.
+        \end{itemize}
+    \item Include the unedited version of the images.
+    \item Summary: 200 (50 x 4) distorted + 50 non-distorted. In total, 250 images.
+    \item Use these 250 images and create the final experiment.
+    \end{itemize}
+\end{itemize}
+
+\newpage
+
+\section*{Meeting with project supervisor 06.05.2021}
+\subsection*{Planned agenda}
+\begin{itemize}
+    \item Talk about the third subjective experiment.
+\end{itemize}
+
+\subsection*{Summaries}
+\begin{itemize}
+    \item We discussed the third subjective experiment:
+    \begin{itemize}
+        \item The dataset should be challenging for the metrics.
+        \item The changes should not change the subjective scores.
+        \item Use Telegram compression. Telegram changes the images.
+        \item The editing we have done is too dramatic. Tune it down.
+        \item When we add noise or blur to the images, find a value that works for about 30-35 of the images.
+    \end{itemize}
+\end{itemize}
+
+\newpage
+
+\section*{Meeting with project supervisor 10.05.2021}
+\subsection*{Planned agenda}
+\begin{itemize}
+    \item Discuss the thesis and the future bachelor presentation.
+\end{itemize}
+
+\subsection*{Summaries}
+\begin{itemize}
+    \item We discussed finishing the thesis.
+    \item We talked about the future bachelor presentation.
+    \item Send the chapters we discussed to Ali by Thursday.
+    \item We will have a meeting Friday afternoon the 14th of May.
+    \item We will have a meeting on Tuesday at 11:00 the 18th of May.
+\end{itemize}
