--- a/glossary.tex
+++ b/glossary.tex
@@ -25,13 +25,59 @@ typically printed as an appendix}
     description={Mathematics is what mathematicians do}
 }
 
+% Words to define
+%scrum
+%frontend
+%backend
+%api
+%dataset
+%kanban
+%biometric
+%REST / RESTful
+%sprint
+%use case
+%Github
+%repository
+%React.js
+%Node.js
+%Axios
+%web framework? Explain what it is
+%Docker
+%Containerization / containers
+%dockerfiles
+%biometric
+%Telegram
 
 % --------------------
 % ----- Acronyms -----
 % --------------------
-
+\setglossarypreamble[acronym]{The page number after an acronym refers to the first time it is used in the thesis.}
+\newacronym{api}{API}{Application Programming Interface}
+\newacronym{ai}{AI}{artificial intelligence}
+\newacronym{cie}{CIE}{International Commission on Illumination}
+\newacronym{cnn}{CNN}{Convolutional Neural Network}
+\newacronym{covid19}{COVID-19}{Coronavirus disease 2019}
+%\newacronym{csv}{CSV}{Comma-separated values}
+\newacronym{cvd}{CVD}{Colour Vision Deficiency}
+\newacronym{dom}{DOM}{Document Object Model}
+\newacronym{xml}{XML}{Extensible Markup Language}
+\newacronym{xhtml}{XHTML}{Extensible HyperText Markup Language}
+\newacronym{xp}{XP}{Extreme Programming}
 \newacronym{fiqm}{FIQM}{Face Image Quality Metric}
 \newacronym{fiqa}{FIQA}{Face Image Quality Assessment}
+\newacronym{fr}{FR}{Face Recognition}
 \newacronym{gdpr}{GDPR}{General Data Protection Regulation}
-\newacronym{ux}{UX}{User Experience}
-\newacronym{ui}{UI}{User Interface}
+\newacronym{html}{HTML}{HyperText Markup Language}
+\newacronym{http}{HTTP}{Hypertext Transfer Protocol}
+\newacronym{icao}{ICAO}{International Civil Aviation Organization}
+\newacronym{iec}{IEC}{International Electrotechnical Commission}
+\newacronym{iso}{ISO}{International Organization for Standardization}
+\newacronym{json}{JSON}{JavaScript Object Notation}
+\newacronym{mrtd}{MRTD}{Machine Readable Travel Documents}
+\newacronym{mvc}{MVC}{Model-View-Controller}
+\newacronym{mtcnn}{MTCNN}{Multitask Cascaded Convolutional Networks}
+\newacronym{ntnu}{NTNU}{Norwegian University of Science and Technology}
+%\newacronym{ux}{UX}{User Experience}
+%\newacronym{ui}{UI}{User Interface}
+
+
