--- a/notes.tex
+++ b/notes.tex
@@ -75,20 +75,39 @@
      - discuss correlation between subj/obj. assessment (3)
   
 7. Conclusion (4)
-    - can the two algorithms be used further? (2)
+    - Object assessment evaluation
+    - Subjective assessment evaluation
+    - Group work evaluation
+    - can the two FIQMs be used further? (2)
     - how are the objective similar to the subjective? same quality scores? (2)
   
  Appendix
     - Project plan
     - Survey instructions
-    - Meeting reports with supervisor
-    - Meeting reports with Mobai
-    - Results (raw data)
+    - Project agreements with NTNU and Mobai
+    - Summary meeting reports with supervisor
+    - Summary meeting reports with Mobai
+    - Toggl report
+    - Results raw data. As CSV or Excel?
     
  
  ----
- Alltid skrive "FIQMs"? Kan vi også bruke "metrics"?
- Python with p or P?
+Sjekk før innlevering:
+- Alle Comments er "resolved"
+- Alle captions i figurer og tabeller skal ikke ha punktum i siste setning.
+- Alle paragrafinnrykk er riktig.
+- "facial images", "face image quality"
+- "Code listing", "Table", "Figure" er skrevet likt.
+- "Python", "Dockerfile", "Docker", "Flask", "Django" osv er skrevet likt.
+- "FaceQnet", "ISO Metrics"
+- Kildelisten ser riktig ut.
+- Fjern upassende white space.
+- Skal vi ha quotes rundt navnene på datasettene?
+- Noen av bildene har (a) og (b) under seg. Andre ikke.
+- Heading oppe i høyre hjørne (navnet på rapporten) må være i orden
+- Det må nødvendigvis ikke være blank side mellom hvert kapittel (https://tex.stackexchange.com/questions/180722/per-chapter-blank-page-disappears-after-chapter-2)
+ 
+ ----
  Mellomrom mellom tekst og citation
  Parenteser rundt figurnavn eller ikke?
  
@@ -99,7 +118,7 @@
  
 %The three image lineups in Figure \ref{fig:ICAOlineup} showcases typical flaws of facial images that negatively affect the quality. The last image of each lineup is considered to have the best quality. The flaws described varies in severity. The face image quality of the lady with her face covered would be at the bottom of the quality scale. The first two images of the man, would not affect the quality to the same degree and the quality of the first two images of the kid, would affect the quality even less. 
  
- 
+Julian er kuuuul
                                        /;    ;\
                                   __  \\____//
                                  /{_\_/   `'\____
@@ -119,4 +138,3 @@
    :__\  \    * `,'*         \  \  :  \   *  8`;'*
        `^'     \ :/           `^'  `-^-'   \v/ :
        
-Julian er kuuuul
