--- a/thesis.bib
+++ b/thesis.bib
@@ -162,7 +162,7 @@
     organization={ICAO [cited 27.04.2021]},
     edition={Version 1.0},
     year={2018},
-    month={April},
+    month={4},
     note={Available from: \url{https://www.icao.int/Security/FAL/TRIP/Documents/TR\%20-\%20Portrait\%20Quality\%20v1.0.pdf}}
 }
 
@@ -171,7 +171,7 @@
     organization={ISO [cited 27.04.2021]},
     edition={First edition},
     year={2010},
-    month={April},
+    month={4},
     note={Available from: \url{https://www.iso.org/standard/50912.html}}
 }
 
@@ -182,7 +182,7 @@
     howpublished={Cornell University [cited 27.04.2021]},
     edition={version 2},
     year={2018},
-    month={May},
+    month={5},
     note={Available from: \url{https://arxiv.org/abs/1710.08092}}
 }
 
@@ -192,7 +192,7 @@
     howpublished={Cornell University [cited 27.04.2021]},
     edition={version 1},
     year={2020},
-    month={September},
+    month={9},
     note={Available from: \url{https://arxiv.org/abs/2009.01103}}
 }
 
@@ -265,4 +265,62 @@
 	title={Image quality metrics for the evaluation of printing workflows},
 	school={University of Oslo},
 	year= {2011},
+}
+
+@article{Tufts-Face-Database,
+    author={Panetta, K. and Wan, Q and Agaian, S and Rajeev, S. and Kamath, S. and Rajendran, R. and Rao, S. and et al.},
+    title={A comprehensive database for benchmarking imaging systems},
+    howpublished={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+    year={2018},
+    note={Available from: \url{http://tdface.ece.tufts.edu/}}
+}
+
+@article{FEI-Face-Database,
+    author={C. E. Thomaz and G. A. Giraldi},
+    title={A new ranking method for Principal Components Analysis and its application to face image analysis},
+    journal={Image and Vision Computing},
+    volume={28},
+    number={6},
+    pages={902-913},
+    year={2010},
+    note={Available from: \url{https://www.sciencedirect.com/science/article/abs/pii/S0262885609002613?via\%3Dihub/}},
+}
+
+@article{QuickEval,
+    author={Khai Van Ngo and Jehans Jr. Storvik and Christopher André Dokkeberg and Ivar Farup and Marius Pedersen},
+    title={QuickEval: A Web Application for Psychometric Scaling Experiments},
+    journal={Image Quality and System Performance XII},
+    volume={9396},
+    pages={9396-24},
+    year={2015},
+}
+
+@article{selfie-dataset,
+    author={Mahdi M. Kalayeh and Misrak Seifu and Wesna LaLanne and Mubarak Shah},
+    title={How to Take a Good Selfie?},
+    journal={Proceedings of ACM Multimedia Conference 2015 (ACMMM 2015)},
+    year={2015},
+    note={Available from: \url{https://www.crcv.ucf.edu/data/Selfie/}},
+}
+
+%CASIA Face Antispoofing Database ("capture from photo")
+@article{CASIA-FAD,
+    author={Zhiwei Zhang and Junjie Yan and Sifei Liu and Zhen Lei and Dong Yi and Stan Z. Li. A},
+    title={A Face Antispoofing Database with Diverse Attacks},
+    journa={Proceedings of the 5th IAPR International Conference on Biometricss (ICB’12)},
+    year={2012},
+}
+
+@book{Ishihara,
+    author={Dr. Shinobu Ishihara},
+    title={The Series of Plates Designed as a Test for Colour-Blindness},
+    publisher={Kanehara Shuppan CO., LTD},
+    edition={24 Plates Edition},
+    year={1972}
+}
+
+@misc{CambridgeColorTest,
+    title={Cambridge Colour Test [internet]},
+    howpublished={Cambridge Research Systems [cited 16.05.21]},
+    note = {Available from: \url{https://www.crsltd.com/tools-for-vision-science/measuring-visual-functions/cambridge-colour-test/}}
 }
